<resources>
    <string name="app_name">Stonks</string>

    <string name="edittext_constant_multiplier">1.0</string>
    <string name="one_day_period_button_text">1D</string>
    <string name="one_week_period_button_text">1W</string>
    <string name="one_month_period_button_text">1M</string>
    <string name="six_months_period_button_text">6M</string>
    <string name="one_year_period_button_text">1Y</string>
    <string name="five_years_period_button_text">5Y</string>

    <string name="cryptocurrencies_tab_name">Crypto</string>
    <string name="currencies_tab_name">Currencies</string>
    <string name="stocks_tab_name">Stocks</string>

    <string name="edittext_constant_hint">Amount</string>
    <string name="button_query_result">Push</string>
    <string name="switch_prediction">Prediction</string>
    <string name="last_updated_date">Data for: %1$s</string>
    <string name="exchange_rate">Rate</string>
    <string name="bid_price">Demand</string>
    <string name="ask_price">Supply</string>
    <string name="market_string">Market:</string>
    <string name="conversion_icon_description">Conversion Icon</string>
    <string name="latest_price_string">Latest Price:</string>
    <string name="price_value_placeholer">Unknown</string>
    <string name="loading_value_placeholder">Loading…</string>

    <string name="default_currency_selector_text">Choose your main currency</string>
    <string name="language_selection_text">And your language</string>
    <string name="english_language_label" translatable="false">ENG</string>
    <string name="russian_language_label" translatable="false">RU</string>
    <string name="preferences_setup_button_text">GO</string>
    <string name="first_guide_page_text">Navigate between modes</string>
    <string name="guide_tap_to_continue">(Tap to continue)</string>
    <string name="second_guide_page_text"><![CDATA[Choose base & target]]></string>

    <string name="toast_check_internet">Please, check internet connection! Turn on the internet RIGHT NOW!!!</string>
    <string name="toast_wrong_input">Wrong input</string>
    <string name="toast_api_not_provide_for_one_day">Api does not provide information for one day</string>
    <string name="toast_calendar_canceled_selection">Cancelled selection</string>
    <string name="toast_empty_response">No data for selected period</string>
    <string name="toast_api_returned_null">Server didn\'t respond, please try again later</string>


    <string-array name="rates">
        <item>AUD, Australian Dollar</item>
        <item>BRL, Brazilian Real</item>
        <item>CAD, Canadian Dollar</item>
        <item>CHF, Swiss Franc</item>
        <item>DKK, Danish Krone</item>
        <item>EUR, Euro</item>
        <item>ILS, Israeli New Sheqel</item>
        <item>JPY, Japanese Yen</item>
        <item>KRW, South Korean Won</item>
        <item>MXN, Mexican Peso</item>
        <item>NOK, Norwegian Krone</item>
        <item>NZD, New Zealand Dollar</item>
        <item>PLN, Polish Zloty</item>
        <item>RUB, Russian Ruble</item>
        <item>SEK, Swedish Krona</item>
        <item>SGD, Singapore Dollar</item>
        <item>TRY, Turkish Lira</item>
        <item>USD, United States Dollar</item>
    </string-array>

    <string-array name="primary_rates">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>CHF</item>
    </string-array>

    <string-array name="crypto_currencies">
        <item>BTC, Bitcoin</item>
        <item>ETH, Ethereum</item>
        <item>USDT, Tether</item>
        <item>XRP, Ripple</item>
        <item>DOT, Polkadot</item>
        <item>ADA, Cardano</item>
        <item>LINK, ChainLink</item>
        <item>LCC, Litecoin-Cash</item>
        <item>BNB, Binance-Coin</item>
        <item>XLM, Stellar</item>
        <item>DOGE, DogeCoin</item>
        <item>EOS, EOS</item>
        <item>XMR, Monero</item>
        <item>NEM, NEM</item>
        <item>TRX, Tronix</item>
        <item>THETA, Theta-Token</item>
        <item>SNX, Synthetix-Network-Token</item>
        <item>VEN, VeChain</item>
        <item>DAI, Dai</item>
        <item>NEO, NEO</item>
        <item>MKR, Maker</item>
        <item>BUSD, Binance-USD</item>
        <item>DASH, Dash</item>
        <item>XRP, Ripple</item>
        <item>BCH, Bitcoin-Cash</item>
    </string-array>

    <string-array name="stocks_list">
        <item>TXMD, TherapeuticsMD</item>
        <item>FUBO, FuboTV</item>
        <item>NRZ, NewResidentialInvestment</item>
        <item>BABA, Alibaba</item>
        <item>AMZN, Amazon</item>
        <item>MSFT, Microsoft</item>
        <item>GOOGL, AlphabetClassA</item>
        <item>ZNGA, Zynga</item>
        <item>GM, GM</item>
        <item>NKE, Nike</item>
        <item>FB, Facebook</item>
        <item>PTON, PelotonInteractive</item>
        <item>V, Visa</item>
        <item>SNE, Sony</item>
        <item>PYPL, PayPal</item>
        <item>UBER, Uber</item>
        <item>CRM, Salesforce</item>
        <item>AZN, AstraZeneca</item>
        <item>LI, LiAutoInc</item>
        <item>NVDA, NVIDIA</item>
        <item>DIS, Disney</item>
        <item>ET, EnergyTransfer</item>
        <item>WMT, Walmart</item>
        <item>APHA, Aphria</item>
        <item>PLUG, PlugPower</item>
        <item>AAPL, Apple</item>
        <item>GE, GE</item>
        <item>DKNG, Draftkings</item>
        <item>SNAP, Snap</item>
        <item>NFLX, Netflix</item>
        <item>SPCE, VirginGalacticHoldings</item>
        <item>KO, Coca-Cola</item>
        <item>JNJ, Johnson&amp;Johnson</item>
        <item>XPEV, XPeng</item>
        <item>LUV, SouthwestAirlines</item>
        <item>SIRI, SiriusXM</item>
        <item>BAC, BankofAmerica</item>
        <item>PENN, PennNationalGaming</item>
        <item>AMD, AMD</item>
        <item>WKHS, Workhorse</item>
        <item>SQ, Square</item>
        <item>NIO, NIO</item>
        <item>MRNA, Moderna</item>
        <item>SAVE, SpiritAirlines</item>
        <item>BA, Boeing</item>
        <item>DAL, DeltaAirLines</item>
        <item>SBUX, Starbucks</item>
        <item>NOK, Nokia</item>
        <item>MRO, MarathonOil</item>
        <item>UAL, UnitedAirlines</item>
        <item>ZM, Zoom</item>
        <item>XOM, ExxonMobil</item>
        <item>TWTR, Twitter</item>
        <item>ABNB, Airbnb</item>
        <item>PFE, Pfizer</item>
        <item>RCL, RoyalCaribbeanGroup</item>
        <item>NKLA, Nikola</item>
        <item>MFA, MFAFinancial</item>
        <item>JBLU, JetBlueAirways</item>
        <item>OGI, OrganiGram</item>
        <item>NCLH, NorwegianCruiseLine</item>
        <item>TSLA, Tesla</item>
        <item>T, AT&amp;T</item>
        <item>INO, Inovio</item>
        <item>CRON, CronosGroup</item>
        <item>F, FordMotor</item>
        <item>CGC, CanopyGrowth</item>
        <item>GPRO, GoPro</item>
        <item>FCEL, FuelCellEnergy</item>
        <item>TLRY, Tilray</item>
        <item>PLTR, PalantirTechnologies</item>
        <item>BB, Blackberry</item>
        <item>MGM, MGMResorts</item>
        <item>HEXO, Hexo</item>
        <item>ACB, AuroraCannabis</item>
        <item>CCL, Carnival</item>
        <item>AAL, AmericanAirlines</item>
        <item>AMC, AMCEntertainment</item>
        <item>SNDL, SundialGrowers</item>
        <item>GME, GameStop</item>
        <item>NAKD, NakedBrand</item>
        <item>ZOM, Zomedica</item>
        <item>CCIV, ChurchillCapital</item>
        <item>IDEX, Ideanomics</item>
        <item>GNUS, GeniusBrands</item>
        <item>VOO, VanguardS&amp;P500ETF</item>
        <item>BNGO, BionanoGenomics</item>
        <item>SPY, SPDRS&amp;P500ETF</item>
        <item>CTRM, CastorMaritime</item>
        <item>PSEC, ProspectCapital</item>
        <item>OCGN, Ocugen,Inc</item>
        <item>ARKK, ARKInnovationETF</item>
        <item>NNDM, NanoDimension</item>
        <item>CPRX, CatalystPharmaceuticals</item>
        <item>IVR, InvescoMortgageCapital</item>
        <item>BLNK, BlinkCharging</item>
        <item>GEVO, Gevo</item>
        <item>GUSH, DirexionDailyS&amp;POil&amp;GasExp.&amp;Prod.Bull2XShares</item>
        <item>SLV, iSharesSilverTrust</item>
        <item>SOLO, ElectrameccanicaVehicles</item>
    </string-array>
</resources>
