<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_padding_size_xlarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinner_stocks"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:entries="@array/stocks_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_market_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_small"
                android:text="@string/market_string"
                android:textSize="@dimen/text_size_smaller"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_stocks" />

            <TextView
                android:id="@+id/textview_market_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_small"
                android:textSize="@dimen/text_size_smaller"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textview_market_string"
                app:layout_constraintTop_toBottomOf="@id/spinner_stocks" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageview_conversion_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/conversion_icon_description"
            app:layout_constraintEnd_toStartOf="@id/spinner_currency"
            app:layout_constraintStart_toEndOf="@id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrows" />

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:entries="@array/rates" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_xlarge"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

        <TextView
            android:id="@+id/textview_price_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_xlarge"
            android:text="@string/latest_price_string"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_xlarge"
            android:text="@string/price_value_placeholer"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_xlarge"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout3">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/period_selection_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedButton="@id/togglebutton_one_day_selector">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/togglebutton_one_day_selector"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:text="@string/one_day_period_button_text"
                android:textAlignment="center"
                android:textSize="@dimen/toggle_button_text_size"
                style="?attr/materialButtonOutlinedStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/togglebutton_one_week_selector"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:text="@string/one_week_period_button_text"
                android:textAlignment="center"
                android:textSize="@dimen/toggle_button_text_size"
                style="?attr/materialButtonOutlinedStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/togglebutton_one_month_selector"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:text="@string/one_month_period_button_text"
                android:textAlignment="center"
                android:textSize="@dimen/toggle_button_text_size"
                style="?attr/materialButtonOutlinedStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/togglebutton_six_months_selector"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:text="@string/six_months_period_button_text"
                android:textAlignment="center"
                android:textSize="@dimen/toggle_button_text_size"
                style="?attr/materialButtonOutlinedStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/togglebutton_one_year_selector"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:text="@string/one_year_period_button_text"
                android:textAlignment="center"
                android:textSize="@dimen/toggle_button_text_size"
                style="?attr/materialButtonOutlinedStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/togglebutton_five_years_selector"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:text="@string/five_years_period_button_text"
                android:textAlignment="center"
                android:textSize="@dimen/toggle_button_text_size"
                style="?attr/materialButtonOutlinedStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/togglebutton_custom_period_selector"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_calendar"
                app:iconGravity="textStart"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:iconPadding="0dp" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/graphViewConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout4">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/stocks_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/text_size_medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_xlarge"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_prediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_xlarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_prediction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/switch_prediction"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
