<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation" />

    <RelativeLayout
        android:id="@+id/guide_overlay_first_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:background="@color/transparent_guide_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_guide_page_main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/first_guide_page_text"
            android:textAlignment="center"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_xlarge" />

        <TextView
            android:id="@+id/first_guide_page_next_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_guide_page_main_text"
            android:text="@string/guide_tap_to_continue"
            android:textAlignment="center"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_medium" />

        <ImageView
            android:id="@+id/first_guide_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/first_guide_page_next_text"
            android:scaleType="fitXY"
            android:src="@drawable/ic_guide_bottom_nav" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/guide_overlay_second_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:background="@color/transparent_guide_bg"
        android:measureWithLargestChild="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/second_guide_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/second_guide_page_main_text"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrows_to_currencies" />

        <TextView
            android:id="@+id/second_guide_page_main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/second_guide_page_next_text"
            android:gravity="center_horizontal"
            android:text="@string/second_guide_page_text"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_xlarge" />

        <TextView
            android:id="@+id/second_guide_page_next_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/guide_tap_to_continue"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_medium" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation"
        android:background="@color/design_default_color_background"/>
</RelativeLayout>
